Added boost options

--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,5 @@ table.weapon-stat { border-collapse: collapse; border: 1px solid #CCB; width: 10
 table.weapon-stat td, table.weapon-stat th { padding: 5px; border: 1px solid #E0E0E0; }
 table.weapon-stat th { background: #E5E5E5; text-align: center; min-width: 50px; }
 input.invalid { background: red; color: #FDFDFD; }
+
+#boost-settings input[type=number] { width: 100px; }
