--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body { font-family:'lucida grande', tahoma, verdana, arial, sans-serif; padding-top: 50px; }
+.navbar a { cursor: pointer; }
 #weapon-boost-area { font-size: 11px; }
 #weapon-boost-area h1 { font-size: 15px; }
 #weapon-select-area { 
@@ -17,7 +18,7 @@ body { font-family:'lucida grande', tahoma, verdana, arial, sans-serif; padding-
 .weapon-boost-group { border-bottom: 2px solid gray; padding: 5px; margin: 5px 0px 5px 0px; }
 .weapon-slot-info, .weapon-slot-stat { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
 .weapon-slot-info { padding-bottom: 5px; }
-.weapon-slot-notification { font-weight: bold; color: red; }
+.weapon-slot-notification label { font-weight: bold; color: red; margin-bottom: 0; }
 .weapon-slot-close { align-self: flex-start; }
 
 table.weapon-stat { border-collapse: collapse; border: 1px solid #CCB; width: 100%; }
